add test and cron schedule

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=via-stream-in-trep
+
+trep.host= 'localhost:14002'
+trep.username= 'kplus'
+trep.service='IDN_SELECTFEED'
+trep.record='input.csv'
+
+start_at='0 0 8 * * 1-5'
+end_at='0 0 2 * * 1-5'
